Fixed icon not showing on slider

--- a/resources/assets/sass/pages/_viewer.scss
+++ b/resources/assets/sass/pages/_viewer.scss
@@ -96,6 +96,7 @@
         img{
           max-width: 500px;
           max-height: 30vh;
+          min-width: 200px;
         }
 
         .image-viewer{
